2001-01-30  Robert Fenk  <fenk@forwiss.de>

	* lisp/bbdb-com.el (bbdb-complete-name): Fixes completion problem
	slipped into with revision 1.89

2001-01-24  Waider  <waider@waider.ie>
        * RELEASED BBDB 2.2
	
	* texinfo/Makefile.in: 
	Added distclean target

	* Makefile.in:
	Removed test targets as they weren't helpful
	Added some new cleaning targets, including distclean

	* lisp/Makefile.in: 
	New cleanup targets

	* Makefile, configure
	Removed, as they're generated files. configure can be extracted
          from the tarball if you don't have the tools to generate it;
          Makefiles can be generated by running configure.

	* lisp/bbdb.el:
	Define caddar if it's not found. Yeesh. How hard is it to do
	 (car (cdr ...)) anyway?

	* lisp/bbdb-whois.el:
	Use geektools.com instead of rs.internic.net
	Slightly smarter parsing of results

	* lisp/bbdb-com.el:
	Add support for M-TAB to expand mail aliases
	Don't look for email completions when there are none!

	* lisp/bbdb-xemacs.el:
	Don't load touchtones if the touchtones directory is unset.

2001-01-24  Sam Steingold  <sds@gnu.org>

	* lisp/bbdb-snarf.el (replace-in-string): Emacs 21 has
	`replace-regexp-in-string' - use it!

	* lisp/bbdb-merge.el (bbdb-merge-file): bugfix:
	the parameter for `match-fun' is `rec', not `r'

2001-01-22  Waider  <waider@waider.ie>

	* lisp/bbdb.el:
	Check that an AKA is not already in the list before adding it

2001-01-18  Waider  <waider@waider.ie>

	* html/index.html: Minor typo at page footer

	* lisp/bbdb-vm.el: Proper fix for VM windowing bug

2001-01-17  Robert.Fenk@gmx.de

	* lisp/bbdb.el (bbdb-always-add-addresses): Docfix

	* lisp/bbdb-vm.el (bbdb/vm-update-record):
	Restored old behavior of returning one record
	(bbdb/vm-update-records-mode):
	(bbdb/vm-update-records):
	Enhanced in order to allow annotating only new messages, which is
	now the default.  This avoids the annoying questions repetition
	weather to add records for unknown persons after restarting a